--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,23 @@
 --- #YAML:1.0
-name:                Lingua-Phonology
-version:             0.33
-abstract:            a module providing a unified way to deal with
-license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.36
-distribution_type:   module
-requires:     
-    B::Deparse:                    0.63
-    Parse::RecDescent:             1.9
-    XML::Simple:                   2.08
+name:               Lingua-Phonology
+version:            0.34
+abstract:           a module providing a unified way to deal with
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    B::Deparse:         0.63
+    Parse::RecDescent:  1.9
+    XML::Simple:        2.08
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
