--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,24 @@
---- #YAML:1.0
-name:               Lingua-Phonology
-version:            0.35
-abstract:           a module providing a unified way to deal with
-author:  []
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+---
+abstract: 'a module providing a unified way to deal with'
+author:
+  - unknown
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    B::Deparse:         0.63
-    Parse::RecDescent:  1.9
-    XML::Simple:        2.08
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120351'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Lingua-Phonology
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  B::Deparse: 0.63
+  Parse::RecDescent: 1.9
+  XML::Simple: 2.08
+version: 0.351
