Import of JASPAX/Lingua-Phonology-0.3503 from CPAN.
gitpan-cpan-distribution: Lingua-Phonology
gitpan-cpan-version:      0.3503
gitpan-cpan-path:         JASPAX/Lingua-Phonology-0.3503.tar.gz
gitpan-cpan-author:       JASPAX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,6 +19,6 @@ no_index:
     - inc
 requires:
   B::Deparse: 0.63
-  Parse::RecDescent: 1
+  Parse::RecDescent: < 1.967
   XML::Simple: 2.08
 version: 0.352
